SELECT element: Commit a provisional OPTION selection on blur.

PopupMenuImpl::hide(), which is called on blur, should have same behavior as
PopupMenuImpl::closePopup(), which is called on canceling a popup.

Also, this CL removes hidePopup() call on 'disabled' attribute change because
enabling 'disabled' attribute will remove the focus, and move blur event handling
from menuListDefaultEventHandler() to dispatchBlurEvent() because
menuListDefaultEventHandler() isn't called if the element is disabled.

BUG=659585

Review-Url: https://codereview.chromium.org/2522383002
Cr-Commit-Position: refs/heads/master@{#434395}

Former-commit-id: b9ec42c0abbf77c9228f0d97ce261fb16b356094